--- a/blog.html
+++ b/blog.html
@@ -26,6 +26,19 @@
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display:
 block;" alt="think" title="think">
 
+<h3>High-beams on!! All the time</h3>
+<p>I break into a complete hysteria when I see that over 90% of the people in my city use their high beam headlights all
+the time. Yes, all the time (in the night time of course). Oh I forgot to add that many of them also turn on their fog
+lamps.
+<p>These are the people using expensive cars, with good headlights. I don't think there is any problem in my city's
+streelight situation also. The whole city is properly lit. High beam is of no use in this city. Other than the obvious
+use of blinding the oncoming traffic. 
+<p>The government of my country recently mandated always on headlamps for two-wheelers. My suggestion is that there
+should be a law mandting the auto-makers to add a cutoff or a beeper for full-beam after a certain amount of time, or
+a warning at least. So that it discourages the offenders to use it unnecessarily. I just wish that people get better
+with this in 2021. 
+<h4><small>December 31 2020</small></h4>
+
 <h3>We are NOT ready!!!</h3>
 <p>Zombies chasing down and killing everybody, a huge tsunami that is wiping of all of the shores, an alien invasion
 or a deadly virus which is slowly killing all the humans. All these apocalyptic possibilities has been covered by some
