big braned blog

--- a/blog.html
+++ b/blog.html
@@ -26,6 +26,29 @@
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display:
 block;" alt="think" title="think">
 
+<h3>The matrix of simulation theory</h3>
+<p>On the last day of 2020 I decided to watch the legendary movie called "The matrix". Loved the movie and enjoyed it
+thoroughly. But, the movie didn't instigate me like "Arrival" or "Parasite". Why? Well I think that it can be because
+for me a movie is great if it makes me think about some new aspect that I was oblivious about before. For the year 1999
+the matrix is certainly ahead of its time and deserves a 10/10 for that.
+<p>What I am trying to convey here is that the idea of "Simulation theory" is well established in my  mind. It has come
+to my mind time and again, whether in the form of a song video "Shelter", JRE podcast or some other way. 
+<p>I was thinking about simulation theory again after watching the matrix and this cool thought came to my mind that can
+potentially prove the theory. The idea is very simple, but let me start with a bit of a pre-face.
+<p>You may or may not know but we have this piece of software in computers that we call as a virtual machine. What it
+does is that it allows us to create a computer inside of a computer. Sounds familiar. right? So what we can do is that
+we can recursively create VMs inside a VM. A simulation inside a simulation. In fact it is a necessary condition for
+a VM to have.
+<p>So let us bring this simple analogy to the world we live in. If we are living in a simulation, then it must be
+possible for us to create a simulation that is so real that is indecernible from reality. And at the moment, we can
+safely say that we have not made such a tech. So the answer is "we are not living is a simulation". Well, it is not that
+simple. What is somewhere down the line we are able to make such a simulation. Will that mean that we are living in
+a simulated world and the real world is just a layer above us.
+<p>That situation is even more complicated as in that case we would not be able to tell at what level of simulation are
+we living in. What if Morpheus realises that the world they wake up in is again a simulation. Sim within a sim. Dream
+within a dream.
+<h4><small>January 02 2020</small></h4>
+
 <h3>High-beams on!! All the time</h3>
 <p>I break into a complete hysteria when I see that over 90% of the people in my city use their high beam headlights all
 the time. Yes, all the time (in the night time of course). Oh I forgot to add that many of them also turn on their fog
