--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,8 @@
     <li><a href="projects.html">Projects</li>
 
     <li><a href="pictures/resume.pdf">Resume</a></li>
+    
+    <li><a href="chords/chords.html">Chords</a></li>
 
 
 </ul>
