chords landing page improvements

--- a/chords/chords.html
+++ b/chords/chords.html
@@ -22,8 +22,8 @@
     </div>
     <br>
     <h3>Ideology</h3>
-    I am learning to play guitar and it is so frustrating to search chords shapes online to find websites that do
-    everything other than showing the guitar chord diagrams. So I made this simple and functional website that does what
+    I am learning to play guitar and I was frustrated when searching for chords shapes online led me to the websites
+    that did everything other than showing the guitar chord diagram. So I made this simple and functional website that does what
     it's supposed to do.<br>
     The chord shapes may not be complete and exhaustive, I will be adding more in the future.
     <h3>How to read the diagrams</h3>
@@ -32,5 +32,11 @@
     O - play the string open<br>
     Numeral (1...) - Play the string from that fret<br>
     As simple as that.
+    <h3>Don't even want to open the borwser to check chords? I have got you covered!</h3>
+    I have made two command line programs to print chord shapes in the terminal. They are :-
+    <h4>chords</h4>
+    A posix script that would print out the chord shape whenever and wherever you want.
+    <h4>some_chords</h4>
+    A C program using ncurses library, can be considered as a fancier version of chords.
   </body>
 </html>
