--- a/chords/chords.html
+++ b/chords/chords.html
@@ -22,10 +22,12 @@
     </div>
     <br>
     <h3>Ideology</h3>
+    <div style="text-align:justified">
     I am learning to play guitar and I was frustrated when searching for chords shapes online led me to the websites
     that did everything other than showing the guitar chord diagram. So I made this simple and functional website that does what
     it's supposed to do.<br>
     The chord shapes may not be complete and exhaustive, I will be adding more in the future.
+    </div>
     <h3>How to read the diagrams</h3>
     The chord diagrams are presented in plain ascii. Each string is represented with its name.<p>
     X - don't play that string<br> 
