Spelling mistake fix

--- a/chords/chords.html
+++ b/chords/chords.html
@@ -22,7 +22,7 @@
     </div>
     <br>
     <h3>Ideology</h3>
-    <div style="text-align:justified">
+    <div style="text-align:justify">
     I am learning to play guitar and I was frustrated when searching for chords shapes online led me to the websites
     that did everything other than showing the guitar chord diagram. So I made this simple and functional website that does what
     it's supposed to do.<br>
