--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,27 @@
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display:
 block;" alt="think" title="think">
 
+<h3>The problem of Ergonomics</h3>
+<p>We have a big egronomic problem ahead of us and it is so sad to see that not a lot of people are aware of the
+problem. Okay, let us start by defining ergonomics. Shall we?
+<p>It is the application of psychological and physiological principle to the engineering and design of products,
+prossess and systems. While we are doing good when it comes to the physiological aspects of ergonomics, but
+psychological factors? I am not so sure about that. Let me explain what I mean.
+<p>With the increasing use of technology for better or for worse we are spending more and more time interacting with
+a computing system of some kind. We are more and more reliant on software solutions for the very basic requirements of
+us. And I am 100% of the opinion that this is a big ergonomic issue. We humans are animals after all, we were not
+designed to live throught the screen of our cell phones 24/7, we were social animals, using our body for a good part of
+the day to get work done. 
+<p>The quaratine along with increasing influence of soycial media has added fuel to the fire. While people are busy
+fighting with each oher on platforms they are wasting their energy and hurting their mind and body. We humans were made
+to see each other in person, millions of neurons firing in the brain as we process the various cues while we are
+conversing with someone are completely thrown off as we talk to someone via chat application. 
+<p>And these aren't even the ones that are bothering me, what I am afraid about is the future with all the AI, AR and
+VR. Fake and manipulated news, videos etc etc can wrech havoc, a glimpse of which we already saw.
+<p>Humans brains were not made to move their thums up to scroll content on social media, we need to understand that. Go
+out, run a mile, get bored while waiting instead of pulling the phone out of that pocket. 
+<h4><small>January 11 2021</small></h4>
+
 <h3>The matrix of simulation theory</h3>
 <p>On the last day of 2020 I decided to watch the legendary movie called "The matrix". Loved the movie and enjoyed it
 thoroughly. But, the movie didn't instigate me like "Arrival" or "Parasite". Why? Well I think that it can be because
