--- a/chords/chords.html
+++ b/chords/chords.html
@@ -36,13 +36,13 @@
     As simple as that.
     <h3>Don't even want to open the borwser to check chords? I have got you covered!</h3>
     I have made two command line programs to print chord shapes in the terminal. They are :-
-    <h4>chords</h4>
+    <h4>1) chords</h4>
     A posix script that would print out the chord shape whenever and wherever you want.
     <br>
     <a href="https://github.com/rohitchouhan07/chords/blob/master/scrot_chords.png">Screenshot</a>
     <br>
     <a href="https://github.com/rohitchouhan07/chords">Link to the source</a>
-    <h4>some_chords</h4>
+    <h4>2) some_chords</h4>
     A C program using ncurses library, can be considered as a fancier version of chords.
     <br>
     <a href="https://github.com/rohitchouhan07/some_chords/blob/master/scrot_some_chords.png">Screenshot</a>
