added bottom padding

--- a/chords/chords.html
+++ b/chords/chords.html
@@ -3,6 +3,10 @@
   <head>
     <title>Some Chords!!</title>
     <meta charset="utf-8">
+    <style type = text/css>
+        html{ padding-bottom: 100px; }
+    </style>
+
   </head>
   <body style="margin:auto; max-width:900px;font-family: 'Courier New', monospace;">
     
