--- a/chords/chords.html
+++ b/chords/chords.html
@@ -43,14 +43,12 @@
     <h4>1) chords</h4>
     A posix script that would print out the chord shape whenever and wherever you want.
     <br>
-    <a href="https://github.com/rohitchouhan07/chords/blob/master/scrot_chords.png">Screenshot</a>
-    <br>
+    <a href="https://github.com/rohitchouhan07/chords/blob/master/scrot_chords.png">Screenshot | </a>
     <a href="https://github.com/rohitchouhan07/chords">Link to the source</a>
     <h4>2) some_chords</h4>
     A C program using ncurses library, can be considered as a fancier version of chords.
     <br>
-    <a href="https://github.com/rohitchouhan07/some_chords/blob/master/scrot_some_chords.png">Screenshot</a>
-    <br>
+    <a href="https://github.com/rohitchouhan07/some_chords/blob/master/scrot_some_chords.png">Screenshot | </a>
     <a href="https://github.com/rohitchouhan07/some_chords">Link to the source</a>
   </body>
 </html>
