New project added `

--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,11 @@
 <h2>Here are a few projects that I have done...</h2>
 <img src="pictures/Spiderman4.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
 
+<h3>Some Chords</h3>
+<p>A website written to be simple and functional, written in plain ascii for portability. To go along with that
+a ncurses program written in C, which you can use from the link below.
+<br>
+<a href="https://github.com/rohitchouhan07/some_chords">Link to the source</a>
 <h3>Chords</h3>
 <p>A simple program to print out common guitar chord shapes right in your
 terminal. Maybe posix compliant, I am not too sure about that.
