--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,21 @@
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display:
 block;" alt="think" title="think">
 
+<h3>Understanding feedback loops</h3>
+<p>The book called, "The subtle art of ..." talks in one of its chapters about feedback loops. It is called the feedback
+loop from hell. But what the hell is the feedback loop from hell. Let's find out.
+I am not an expert by any means, but I have observed that the feedback loop exists in more places than you might think.
+<p>One example is obviosuly the one in which you become more worried because you worry about being worried. One example
+can be poverty, being in poverty people are devoid of the opportunities and hence poverty previals. Debt loop is again
+a deadly one, you take more debt to pay the previous debt.
+<p>Feedback loops aren't just from hell. They can be from heavens as well. Like a good university will attract talented
+students and teacher and because of them the university will become more good (better is avoided intentionally). A good
+brand sells more products makes more profit and hence can make better products with R&D and hence can become a better
+brand.
+<p>It is clear that feedback loops provides strong momentum to a lot of things. But the tricky part is escaping from
+negetive loops and keep riding the positive loops.
+<h4><small>January 23 2021</small></h4>
+
 <h3>The problem of Ergonomics</h3>
 <p>We have a big egronomic problem ahead of us and it is so sad to see that not a lot of people are aware of the
 problem. Okay, let us start by defining ergonomics. Shall we?
