--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,15 @@
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display:
 block;" alt="think" title="think">
 
+<h3>Review - A brief history of time</h3>
+<p>Great book for people interested in physics and astro-physics. Review over.
+<p>Now lets talk about the title, the title of the book is very clever and has a hidden meaning to it. The book is about
+the history of science and progress we made in physics or astro-physics. So, shouldn't it be called, a brief history of
+science?. Here is my opinion the the title, our observational sense of time is what we call as the past, present and the
+future. So, in that sense in makes perfect sense to call it as a history of time. Because time exists because we who
+have the pwer to imagine time exist.
+<h4><small>February 16 2021</small></h4>
+
 <h3>Understanding feedback loops</h3>
 <p>The book called, "The subtle art of ..." talks in one of its chapters about feedback loops. It is called the feedback
 loop from hell. But what the hell is the feedback loop from hell. Let's find out.
