New blog after a loooooong time

--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,17 @@
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display:
 block;" alt="think" title="think">
 
+<h3>The Youtube problem is solved!!</h3>
+<p>A few months back I used to spend a lot of time watching YT videos on my phone, to curb the addiction, I simply
+deleted the YT app from my phone. So that whenever I wanted to watch YT I would have to use the browser, which  was not
+very ideal.
+<p>I recently switched to a new phone and so I installed YT again just to check the screen and audio quality. But thank
+Google, they recently added a very nice feature in the app, which solved my addiction problems.
+<p>The feature is called "lots of unskippable ads". I am very happy with this new feature (no sarcasm intended). The ads
+almost make me quit the app and don't want to watch the video anymore, which is exactly what I wanted. Some people might
+complain about this, but to me it's a great change.
+<h4><small>March 16 2021</small></h4>
+
 <h3>Review - A brief history of time</h3>
 <p>Great book for people interested in physics and astro-physics. Review over.
 <p>Now lets talk about the title, the title of the book is very clever and has a hidden meaning to it. The book is about
