--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,25 @@
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display:
 block;" alt="think" title="think">
 
+<h3>Micro-innovation is highly underrated</h3>
+<p>"Mirco-innovation" I read this term in an article in newspaper. I would like to tell you a very simple obsevation of
+mine. The place where I live, we have a drink which is called as sugarcane juice or "Ganne ka ras". Which is a simple
+drink made by sqeezing sugarcane in a machine and then adding lemon and mint. I spent all my life seeing just two or
+three type of machine. I will attach the image links below. One is a simple mechanical machine with two wheels to turn
+the rollers between which the sugarcane would be crushed, and the second one was a modified version of the same. A small
+kerosene engine with a belt is attached to the same machine. 
+<p>Now in India sugar cane sellers are in plenty and a lot of people earn their living from the same. I recently saw an
+eletric machine, which produced no noise or smoke and was much safer than the mechanical counterparts. While I am sure
+that these things would have been used since a long time and you can blame me for not having a keen eyes to spot the
+ones.
+<p>But my question is, why is it not so widely used that 8/10 machines that a spot are the electric ones and this thing
+should have happened at least 5-10 years ago. Building a folding phone is something that I would classify as
+macro-innovation, but making a push cart with attached battery and an electric sugarcane extractor at an affordable
+price is something that I would call as a micro-innovation product.
+<p>Another great thing about micro-innovation is that it make new and diversified avenues for economic growth and
+activity.
+<h4><small>March 20 2021</small></h4>
+
 <h3>The Youtube problem is solved!!</h3>
 <p>A few months back I used to spend a lot of time watching YT videos on my phone, to curb the addiction, I simply
 deleted the YT app from my phone. So that whenever I wanted to watch YT I would have to use the browser, which  was not
