--- a/chords/chords.html
+++ b/chords/chords.html
@@ -32,7 +32,7 @@
     it's supposed to do.<br>
     The chord shapes may not be complete and exhaustive, I will be adding more in the future.
     </div>
-    <h3>How to read the diagrams</h3>
+    <h3>How to read the diagrams?</h3>
     The chord diagrams are presented in plain ascii. Each string is represented with its name.<p>
     X - don't play that string<br> 
     O - play the string open<br>
