ways to contribute

--- a/chords/chords.html
+++ b/chords/chords.html
@@ -50,5 +50,8 @@
     <br>
     <a href="https://github.com/rohitchouhan07/some_chords/blob/master/scrot_some_chords.png">Screenshot | </a>
     <a href="https://github.com/rohitchouhan07/some_chords">Link to the source</a>
+    <h3>Missing some chords?</h3>
+    Sure, you can contribute here - <br>
+    <a href="https://github.com/rohitchouhan07/rohitchouhan07.github.io/tree/master/chords">Make a pull request</a>
   </body>
 </html>
