--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,23 @@
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display:
 block;" alt="think" title="think">
 
+<h3>Sunday lockdowns are doing more harm than good</h3>
+<p>To curb the second wave of covid cases the administration of my city decided to close the businesses at 9 PM and
+curfew on sundays. I don't even know why the administration thought that this would bring down the rate of infection.
+<p>If you think it casually, then you might argue that it is a good measure and would restrict the motion of people in
+"non-essential" days and hours. Actually it has exact opposite effect. Let me explain.
+<p>If you have observed the rush patterns of a business/road/store, it is a similar pattern across the board. For
+traffic it peaks at the office going hour of 9-10 and in the evening it is 7-8 PM. Similar can be said about retaurants,
+stores etc. the only exception being that they witness very less rush in the morning.
+<p>Now lets see what curfew after 9PM does. It forces the people to go to reach their destination early, even for the
+people who do so after 9 or 10 which are actually quite hours. This leads to increased rush in the rush hours. Hence
+more chances of infection. 
+<p>Same is the case with sundays, yes I do agree that sundays are busy in terms of restaurants, malls, shops and cafes.
+But I would still say that sunday lockdowns are a bad idea. Here's why, the break/reduction of trensmission of infection
+that can happen due to the virtue of sunday lockdown is esentially nullified by the extra rush on saturday nights. 
+More lanes of traffic would lead to less traffic per lane, think of it like this. 
+<h4><small>March 27 2021</small></h4>
+
 <h3>Micro-innovation is highly underrated</h3>
 <p>"Mirco-innovation" I read this term in an article in newspaper. I would like to tell you a very simple obsevation of
 mine. The place where I live, we have a drink which is called as sugarcane juice or "Ganne ka ras". Which is a simple
