--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,24 @@
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display:
 block;" alt="think" title="think">
 
+<h3>Eating in the age of dieting</h3>
+<p>I was there on flipkart to buy a harry potter book, saw this one on the recommended page read the description and
+immediately decided to buy it. So how is it?
+<p>Turned out to be the best decision of 2021 so far. Before reading the book I was "your average gym goer". Counting
+calories, limiting carbs, loading proteins, brown bread and oats for breakfast type of person. 
+<p>The book is kind of a revelation, all the diet fads of our times are scietifically debunked by the author. Keto diet,
+low fat diet, intermittent fasting, zero-carb, vegan-diet, carnivore diet blah blah. Thinking about food in terms of
+numbers is a disrespect to the thing that gives us life. There is a lot that goes behind it, apart from carbs, proteins
+and fats. What is the use of 200 gms of lean protien intake if the body cannot assimilate it properly.
+<p>Simple and to the point book that would clear the cobwebs of any person who is into fitness these days. The author
+explains a simple to follow and sustainable diet to get rid of excess fat and build lean muscle mass. I would tell you
+the secret only if you promise not to tell anyone.  Promise?
+<p>EAT home cooked locally produced culturally followed diet. EAT a quantity that make you feel full and energetic. EAT
+the superfoods that our country is blessed with in a form that is being eaten since ages, don't wait for the west to do
+a few scientific studies, package that into a fancy packet and then sell it to you. The only way to stay fit and alive
+is to EAT and not Diet.
+<h4><small>March 29 2021</small></h4>
+
 <h3>Sunday lockdowns are doing more harm than good</h3>
 <p>To curb the second wave of covid cases the administration of my city decided to close the businesses at 9 PM and
 curfew on sundays. I don't even know why the administration thought that this would bring down the rate of infection.
