--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,13 @@
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display:
 block;" alt="think" title="think">
 
+<h3>Superhero stereotype</h3>
+<p>It is my general observation that most of the superheros do not have mother and father. Mostly they loose them well
+before they become a superhero. Examples are Iron man, spiderman, superman, batman, black widow, Harry Potter, star
+lord, thor etc etc. I am sure that the "being orphan" percentage is well over 80. I don't know the reason for this
+stereotype neither do I know why this stereotype is so widespread. 
+<h4><small>April 3 2021</small></h4>
+
 <h3>Eating in the age of dieting</h3>
 <p>I was there on flipkart to buy a harry potter book, saw this one on the recommended page read the description and
 immediately decided to buy it. So how is it?
