--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,27 @@
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display:
 block;" alt="think" title="think">
 
+<h3>Start over again</h3>
+<p>Seems like starting all over again isn't as bad or boring as it seems. I am a little unsure about the applicability
+of this observation on general population. But still, let's talk about it.
+<p>Let us start with some games. Counter strike, super mario, flappy bird, subway surfers, getting over it, pubg etc. All these
+games are very popular games and chances are regardlessof your age you must have heard about at least one of them. All
+these games have one thing in common. When you fail or die you start over again. There is no concept of save in these
+games. And I think this is the very thing that made these games very addictive and famous. Every time we died in on of
+these games, our mind told us that we can do better next time or that in the next try we will win. And this made us push
+the retry button again and again and again. 
+<p>If we fail we start over again. Getting better and better with each try inching closer and closer to the goal.
+Ultimately completing the game or reaching the goal.
+<p>This observation made me realise that Humans have a knack for starting over again and this never give up attitude.
+The reason that this attitude is showcased more in video games is that in a game, there is no real loss on failing
+multiple times. This isn't the case with real life. We are afraid of failing and hence afraid of starting over
+again. Also games are designed in such a way that we can see our improvements on a spectrum, like an analog signal. But
+in real life it can be the case sometimes that the progress is not realised that quickly hence resulting in frustration
+and then quitting the task.
+<p>I would like to quote a line from my favorite CS youtuber WarOwl.<br>
+<em>Allow youreself to fail</em>
+<h4><small>April 4 2021</small></h4>
+
 <h3>Superhero stereotype</h3>
 <p>It is my general observation that most of the superheros do not have mother and father. Mostly they loose them well
 before they become a superhero. Examples are Iron man, spiderman, superman, batman, black widow, Harry Potter, star
