--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,19 @@
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display:
 block;" alt="think" title="think">
 
+<h3>Sign up with hell</h3>
+<p>I have over 150 account of different websites and services and the count increases every day. Every small thing that
+you need to do today on the internet requires you to sign in first. I don't even remember the credentials for even 10 of
+my accounts. Every time I forget the password or miss it to save to my browser, all I have to do is to click on forgot
+password, and I admit that I don't even try to rember the same passwords that I tend to use over and over with small
+variations. I just rely on forgot password. 
+<p>Why are we using passwords in the first place when all we do is forget passwords, use the same passwords, rely on
+browser saves or password managers. The strength of passwords is that they are something that you know. All it's strngth
+is lost when we forget our passwords.
+<p>It's high time that we switch to a better way of signing in. It's time to get rid of passwords and the old signin
+methods. Maybe in the utopian world there are websites that allow you to use them without signin.
+<h4><small>April 11 2021</small></h4>
+
 <h3>Start over again</h3>
 <p>Seems like starting all over again isn't as bad or boring as it seems. I am a little unsure about the applicability
 of this observation on general population. But still, let's talk about it.
