--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 
     <li><a href="index.html">Home</a></li>
 
-    <li><a href="blog.html">Blog</a></li>
+    <!-- <li><a href="blog.html">Blog</a></li> -->
 
     <li><a href="projects.html">Projects</li>
 
@@ -393,7 +393,7 @@ All thanks to the corona-chan I dug deeper and deeper into this linux rabbit hol
 <footer>
     <a href="index.html"><img src="pictures/footer-home.svg" alt="Home" title="Return to main page"> HOME</a> &mdash;
     <a href="contact/contact.html"><img src="pictures/email.svg" alt="Contact" title="How to contact me"> CONTACT</a> &mdash;
-    <a href="blog.html"><img src="pictures/blog.svg" alt="Blog" title="Blog"> BLOG</a> &mdash;
+    <!-- <a href="blog.html"><img src="pictures/blog.svg" alt="Blog" title="Blog"> BLOG</a> &mdash; -->
     <a href="rss.xml"><img src="pictures/rss.svg" alt="RSS" title="Subscribe to my RSS feed for updates."> RSS</a>
 </footer>
 
