--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Rohit Chouhan's low-tech Website</title>
+<title>Rohit Chouhan's website</title>
 <link rel='stylesheet' type='text/css' href='style.css'>
 <meta charset="utf-8"/>
 </head>
 <body>
 
-<h1>Rohit Chouhan's low-tech Website</h1>
+<h1>Rohit Chouhan's website</h1>
 <nav>
 <ul class="menubar">
 
     <li><a href="index.html">Home</a></li>
 
-    <li><a href="blog.html">Blog</a></li>
+    <!-- <li><a href="blog.html">Blog</a></li> -->
 
     <li><a href="projects.html">Projects</li>
 
@@ -35,7 +35,7 @@
 <footer>
     <a href="index.html"><img src="pictures/footer-home.svg" alt="Home" title="Return to main page"> HOME</a> &mdash;
     <a href="contact.html"><img src="pictures/email.svg" alt="Contact" title="How to contact me"> CONTACT</a> &mdash;
-    <a href="blog.html"><img src="pictures/blog.svg" alt="Blog" title="Blog"> BLOG</a> &mdash;
+    <!-- <a href="blog.html"><img src="pictures/blog.svg" alt="Blog" title="Blog"> BLOG</a> &mdash; -->
     <a href="rss.xml"><img src="pictures/rss.svg" alt="RSS" title="Subscribe to my RSS feed for updates."> RSS</a>
 </footer>
 
