--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>Rohit Chouhan's old-school Website</title>
+<title>Rohit Chouhan's website</title>
 <link rel='stylesheet' type='text/css' href='style.css'>
 <meta charset="utf-8"/>
 </head>
 <body>
 
-<h1>Rohit Chouhan's old-school website</h1>
+<h1>Rohit Chouhan's website</h1>
 <nav>
 <ul class="menubar">
 
     <li><a href="index.html">Home</a></li>
 
-    <li><a href="blog.html">Blog</a></li>
+    <!-- <li><a href="blog.html">Blog</a></li> -->
 
     <li><a href="projects.html">Projects</li>
 
@@ -23,21 +23,21 @@
 
 </ul>
 </nav>
-<h2>Well...here we go</h2>
-<p>Hey there, my name is Rohit and this is my website. You might wonder why
-does it looks so 1990s. That is because I intend it to be that way, making
-a simple website doesn't need to involve a dozen frameworks. I admire people
-like Luke Smith and Richard Stallman who appreciate philosophies of UNIX. Keeping things simple and avoiding the omnipresent over-engineering is the main motive here.</p>
+<h2>About me</h2>
+<p>Hi there, my name is Rohit.<br>
+    Rohit is currently a computer science master's student at Stony Brook University, NY. He is interested in
+    operating systems and security. 
+<p>He is also a Potter head and loves reading books. He aslo likes playing computer games and listening
+ to podcasts. </p>
 
 <img src="pictures/spiderman_red.gif" style="max-width: 50%;margin: auto; display: block;" alt="Under construction..." title="Under construction...">
-<h2>I recommend having a quick look at my blog before leaving</h2>
-<p>I write about all the things that comes to my mind. It is my personal social media, actually it is the type of social media that we all deserve.</p>
+<h2>I recommend having a quick look at the other links before leaving</h2>
 
 <footer>
     <a href="index.html"><img src="pictures/footer-home.svg" alt="Home" title="Return to main page"> HOME</a> &mdash;
     <a href="contact.html"><img src="pictures/email.svg" alt="Contact" title="How to contact me"> CONTACT</a> &mdash;
     <a href="blog.html"><img src="pictures/blog.svg" alt="Blog" title="Blog"> BLOG</a> &mdash;
-    <a href="rss.xml"><img src="pictures/rss.svg" alt="RSS" title="Subscribe to my RSS feed for updates."> RSS</a>
+    <!-- <a href="rss.xml"><img src="pictures/rss.svg" alt="RSS" title="Subscribe to my RSS feed for updates."> RSS</a> -->
 </footer>
 
 </body>
