--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
 </ul>
 </nav>
 <h2>About me</h2>
-<p>Hi there, my name is Rohit.<br>
-    Rohit is currently a computer science master's student at Stony Brook University, NY. He is interested in
+<p> Rohit is currently a computer science master's student at Stony Brook University, NY. He is interested in
     operating systems and security. 
-<p>He is also a Potter head and loves reading books. He aslo likes playing computer games and listening
+<p>He is also a Potter head and spidey fan. He also likes playing computer games, reading books and listening
  to podcasts. </p>
 
 <img src="pictures/spiderman_red.gif" style="max-width: 50%;margin: auto; display: block;" alt="Under construction..." title="Under construction...">
