--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <li><a href="index.html">Home</a></li>
 
     <!-- <li><a href="blog.html">Blog</a></li> -->
+    <li><a href="links.html">Useful Links</li>
 
     <li><a href="projects.html">Projects</li>
 
@@ -29,13 +30,12 @@
 <p>He is also a Potter head and spidey fan. He also likes playing computer games, reading books and listening
  to podcasts. </p>
 
-<img src="pictures/spiderman_red.gif" style="max-width: 50%;margin: auto; display: block;" alt="Under construction..." title="Under construction...">
 <h2>I recommend having a quick look at the other links before leaving</h2>
 
 <footer>
     <a href="index.html"><img src="pictures/footer-home.svg" alt="Home" title="Return to main page"> HOME</a> &mdash;
     <a href="contact.html"><img src="pictures/email.svg" alt="Contact" title="How to contact me"> CONTACT</a> &mdash;
-    <a href="blog.html"><img src="pictures/blog.svg" alt="Blog" title="Blog"> BLOG</a> &mdash;
+    <a href="blog.html"><img src="pictures/blog.svg" alt="Blog" title="Blog"> BLOG</a> 
     <!-- <a href="rss.xml"><img src="pictures/rss.svg" alt="RSS" title="Subscribe to my RSS feed for updates."> RSS</a> -->
 </footer>
 
