revamped the entire look

--- a/contact.html
+++ b/contact.html
@@ -7,37 +7,36 @@
 </head>
 <body>
 
-<h1>Rohit Chouhan's website</h1>
-<nav>
-<ul class="menubar">
-
-    <li><a href="index.html">Home</a></li>
-
-    <!-- <li><a href="blog.html">Blog</a></li> -->
-
-    <li><a href="projects.html">Projects</li>
-
-    <li><a href="pictures/resume.pdf">Resume</a></li>
-    
-    <li><a href="chords/chords.html">Chords</a></li>
-
-
-</ul>
-</nav>
-<h2>Mail me...</h2>
-<img src="pictures/email.svg" style="max-width: 20%;margin: auto; display: block;" alt="Under construction..." title="Under construction...">
-<h3><a href="mailto:rohitchouhan07@gmail.com">rohitchouhan07@gmail.com</a></h3></br>
-
-
-<img src="pictures/pika.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
+<h1>Contact</h1>
+<div style="text-align:center;display:block;font-size:15px">
+      <a href="./index.html">Home |</a> 
+      <a href="./projects.html">Projects |</a> 
+      <a href="./links.html">Useful Links |</a> 
+      <a href="./contact.html">Contact |</a> 
+      <a href="./chords/chords.html">Chords |</a> 
+      <a href="./pictures/resume.pdf">Resume |</a> 
+      <a href="https://github.com/rohitchouhan07">Github</a>
+</div>
+<br>
+<h3>Mail me...</h3>
+<h4><a href="mailto:rohitchouhan07@gmail.com">rohitchouhan07@gmail.com</a></h4>
+<h3>Github</h3>
+<h3><a href="https://github.com/rohitchouhan07">@rohitchouhan07</a></h3>
+<h3>Linked in</h3>
+<h4><a href="https://www.linkedin.com/in/rohitchouhan07/">@rohitchouhan07</a></h4>
+<h3>Youtube</h3>
+<h4><a href="https://www.youtube.com/channel/UCy7pD0eGL-fBnqyl0zYXECg">@Rohit Chouhan</a></h4>
 
 
-<footer>
+
+
+<img src="./pictures/Spiderman4.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
+
+
+<footer style="font-size:14px;">
     <a href="index.html"><img src="pictures/footer-home.svg" alt="Home" title="Return to main page"> HOME</a> &mdash;
     <a href="contact.html"><img src="pictures/email.svg" alt="Contact" title="How to contact me"> CONTACT</a> &mdash;
-    <!-- <a href="blog.html"><img src="pictures/blog.svg" alt="Blog" title="Blog"> BLOG</a> &mdash; -->
-    <a href="rss.xml"><img src="pictures/rss.svg" alt="RSS" title="Subscribe to my RSS feed for updates."> RSS</a>
-</footer>
-
-</body>
+    <a href="blog.html"><img src="pictures/blog.svg" alt="Blog" title="Blog"> BLOG</a> 
+    <!-- <a href="rss.xml"><img src="pictures/rss.svg" alt="RSS" title="Subscribe to my RSS feed for updates."> RSS</a> -->
+</footer></body>
 </html> 
