--- a/index.html
+++ b/index.html
@@ -7,32 +7,28 @@
 </head>
 <body>
 
-<h1>Rohit Chouhan's website</h1>
-<nav>
-<ul class="menubar">
+<h1>Rohit Chouhan</h1>
 
-    <li><a href="index.html">Home</a></li>
-
-    <!-- <li><a href="blog.html">Blog</a></li> -->
-    <li><a href="links.html">Useful Links</li>
-
-    <li><a href="projects.html">Projects</li>
-
-    <li><a href="pictures/resume.pdf">Resume</a></li>
-
-    <li><a href="chords/chords.html">Chords</a></li>
-
-</ul>
-</nav>
+<div style="text-align:center;display:block;font-size:15px">
+      <a href="./index.html">Home |</a> 
+      <a href="./projects.html">Projects |</a> 
+      <a href="./links.html">Useful Links |</a> 
+      <a href="./contact.html">Contact |</a> 
+      <a href="./chords/chords.html">Chords |</a> 
+      <a href="./pictures/resume.pdf">Resume |</a> 
+      <a href="https://github.com/rohitchouhan07">Github</a>
+</div>
+<br>
 <h2>About me</h2>
 <p> Rohit is currently a computer science master's student at Stony Brook University, NY. He is interested in
-    operating systems and security. 
+    operating systems and systems security. Before coming to Stony Brook, he worked as a software engineer in Accenture.
+    More information is available in his Resume.
 <p>He is also a Potter head and spidey fan. He also likes playing computer games, reading books and listening
  to podcasts. </p>
 
-<h2>I recommend having a quick look at the other links before leaving</h2>
+<h3>I recommend having a quick look at the other links before leaving</h2>
 
-<footer>
+<footer style="font-size:14px;">
     <a href="index.html"><img src="pictures/footer-home.svg" alt="Home" title="Return to main page"> HOME</a> &mdash;
     <a href="contact.html"><img src="pictures/email.svg" alt="Contact" title="How to contact me"> CONTACT</a> &mdash;
     <a href="blog.html"><img src="pictures/blog.svg" alt="Blog" title="Blog"> BLOG</a> 
