--- a/projects.html
+++ b/projects.html
@@ -8,24 +8,16 @@
 <body>
 
 <h1>My Projects</h1>
-<nav>
-<ul class="menubar">
-
-    <li><a href="index.html">Home</a></li>
-
-    <!-- <li><a href="blog.html">Blog</a></li> -->
-
-    <li><a href="projects.html">Projects</li>
-
-    <li><a href="pictures/resume.pdf">Resume</a></li>
-    
-    <li><a href="chords/chords.html">Chords</a></li>
-
-
-</ul>
-</nav>
-<h2>Projects I have worked on</h2>
-<img src="pictures/Spiderman4.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
+<div style="text-align:center;display:block;font-size:15px">
+      <a href="./index.html">Home |</a> 
+      <a href="./projects.html">Projects |</a> 
+      <a href="./links.html">Useful Links |</a> 
+      <a href="./contact.html">Contact |</a> 
+      <a href="./chords/chords.html">Chords |</a> 
+      <a href="./pictures/resume.pdf">Resume |</a> 
+      <a href="https://github.com/rohitchouhan07">Github</a>
+</div>
+<br>
 
 <h3>Safex</h3>
 <p>
@@ -74,11 +66,11 @@ theme”.
 “Navigate” theme has crossed 300K downloads on Google Play Store.<br>
 <a href="https://play.google.com/store/apps/details?id=com.rc.navigate&hl=en_IN">Link to play store</a></p>
 
-<footer>
+<footer style="font-size:14px;">
     <a href="index.html"><img src="pictures/footer-home.svg" alt="Home" title="Return to main page"> HOME</a> &mdash;
-    <a href="contact/contact.html"><img src="pictures/email.svg" alt="Contact" title="How to contact me"> CONTACT</a> &mdash;
-    <!-- <a href="blog.html"><img src="pictures/blog.svg" alt="Blog" title="Blog"> BLOG</a> &mdash; -->
-    <a href="rss.xml"><img src="pictures/rss.svg" alt="RSS" title="Subscribe to my RSS feed for updates."> RSS</a>
+    <a href="contact.html"><img src="pictures/email.svg" alt="Contact" title="How to contact me"> CONTACT</a> &mdash;
+    <a href="blog.html"><img src="pictures/blog.svg" alt="Blog" title="Blog"> BLOG</a> 
+    <!-- <a href="rss.xml"><img src="pictures/rss.svg" alt="RSS" title="Subscribe to my RSS feed for updates."> RSS</a> -->
 </footer>
 
 </body>
