more better website

--- a/index.html
+++ b/index.html
@@ -20,13 +20,34 @@
 </div>
 <br>
 <h2>About me</h2>
-<p> Rohit is currently a computer science master's student at Stony Brook University, NY. He is interested in
+<hr/>
+<img style="float:right;display: block;margin-left: auto;margin-right: auto;width: 20%;height: 20%" src="./pictures/profile.jpg" alt="my picture">
+Rohit is currently a computer science master's student at Stony Brook University, NY. He is interested in
     operating systems and systems security. Before coming to Stony Brook, he worked as a software engineer in Accenture.
+    <br>
+    He is on a look out for interships in Software Engineering and Systems Engineering roles.
     More information is available in his Resume.
-<p>He is also a Potter head and spidey fan. He also likes playing computer games, reading books and listening
- to podcasts. </p>
-
-<h3>I recommend having a quick look at the other links before leaving</h2>
+    <br>
+He is also a Potter head and spidey fan. He also likes playing computer games, reading books and listening
+to podcast.
+<br>
+<br>
+<br>
+<h2>Software I am currently using</h2>
+<hr/>
+<h4>Operating System</h4>
+I am currently using <a href="https://endeavouros.com/">EndevourOS</a> is an Arch Based Linux distribution, I always prefer using Linux on my personal machines.
+I also recommend people to make a switch from Ubuntu to Arch based distributions, there is much more offered here in the Arch world.
+<h4>Desktop Environment</h4>
+Using <a href="https://github.com/baskerville/bspwm">bspwm</a>, polybar and sxhkd. Bspwm is a tiling window manager which tiles windows automatically onto the screen.
+If you are using Linux and haven't checked out any tiling window manager. I highly recommend trying one. It would feel
+like a new way to interact with your computer. It is far more efficient than a traditional desktop environment, and also
+looks very cool. :P
+<h4>Text editor and IDE</h4>
+For smaller tasks and projects is use Neovim. I use a preconfigured version called <a href="https://nvchad.github.io/">Nvchad</a>.
+I cannot explain in words the usefulness and extensibility of vim, everyone should spend some time learning vim. 
+OSS verison of Vscode is my IDE of choice, but often times when I want to use a GUI text editor I use Geany.
+<h3>I recommend having a quick look at the other links before leaving</h3>
 
 <footer style="font-size:14px;">
     <a href="index.html"><img src="pictures/footer-home.svg" alt="Home" title="Return to main page"> HOME</a> &mdash;
