--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Rohit Chouhan's website</title>
+<title>Arun Kumar's website</title>
 <link rel='stylesheet' type='text/css' href='style.css'>
 <meta charset="utf-8"/>
 </head>
@@ -12,26 +12,19 @@
       <a href="./index.html">Home |</a> 
       <a href="./projects.html">Projects |</a> 
       <a href="./links.html">Useful Links |</a> 
-      <a href="./contact.html">Contact |</a> 
-      <a href="./chords/chords.html">Chords |</a> 
+      <a href="./contact.html">Contact |</a>
       <a href="./pictures/resume.pdf">Resume |</a> 
-      <a href="https://github.com/rohitchouhan07">Github</a>
+      <a href="https://github.com/2108arunk">Github</a>
 </div>
 <br>
 <h3>Mail me...</h3>
-<h4><a href="mailto:rohitchouhan07@gmail.com">rohitchouhan07@gmail.com</a></h4>
+<h4><a href="mailto:arukumar@cs.stonybrook.edu.com">arukumar@cs.stonybrook.edu.com</a></h4>
 <h3>Github</h3>
-<h4><a href="https://github.com/rohitchouhan07">@rohitchouhan07</a></h4>
+<h4><a href="https://github.com/2108arunk">@2108arunk</a></h4>
 <h3>Linked in</h3>
-<h4><a href="https://www.linkedin.com/in/rohitchouhan07/">@rohitchouhan07</a></h4>
-<h3>Youtube</h3>
-<h4><a href="https://www.youtube.com/channel/UCy7pD0eGL-fBnqyl0zYXECg">@Rohit Chouhan</a></h4>
-
-
-
+<h4><a href="https://www.linkedin.com/in/arun-kumar-47b4b9a9/">@arunkumar</a></h4>
 
 <img src="./pictures/Spiderman4.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
-
 
 <footer style="font-size:14px;">
     <a href="index.html"><img src="pictures/footer-home.svg" alt="Home" title="Return to main page"> HOME</a> &mdash;
