--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>Rohit Chouhan's website</title>
+<title>Arun Kumar's website</title>
 <link rel='stylesheet' type='text/css' href='style.css'>
 <meta charset="utf-8"/>
 </head>
 <body>
 
-<h1>Rohit Chouhan</h1>
+<h1>Arun Kumar</h1>
 
 <div style="text-align:center;display:block;font-size:15px">
       <a href="./index.html">Home |</a> 
       <a href="./projects.html">Projects |</a> 
       <a href="./links.html">Useful Links |</a> 
       <a href="./contact.html">Contact |</a> 
-      <a href="./chords/chords.html">Chords |</a> 
       <a href="./pictures/resume.pdf">Resume |</a> 
-      <a href="https://github.com/rohitchouhan07">Github</a>
+      <a href="https://github.com/2108arunk">Github</a>
 </div>
 <br>
 <h2>About me</h2>
