--- a/links.html
+++ b/links.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>Rohit Chouhan's website</title>
+<title>Arun Kumar's website</title>
 <link rel='stylesheet' type='text/css' href='style.css'>
 <meta charset="utf-8"/>
 </head>
@@ -13,8 +13,7 @@
       <a href="./index.html">Home |</a> 
       <a href="./projects.html">Projects |</a> 
       <a href="./links.html">Useful Links |</a> 
-      <a href="./contact.html">Contact |</a> 
-      <a href="./chords/chords.html">Chords |</a> 
+      <a href="./contact.html">Contact |</a>
       <a href="./pictures/resume.pdf">Resume |</a> 
       <a href="https://github.com/rohitchouhan07">Github</a>
 </div>
