--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,10 @@ improvement over a standard traffic light.<br>
 
 <h3>Navigation Bar and Status bar customisation for Android</h3>
 <p>These are theme-ing apps that work alongside the Substratum theme engine for
-Android to change and customize navigation and status bar of an android device.
+Android to change and customize
+
+
+navigation and status bar of an android device.
 I made them possible using guides from the theme community, Android Studio,
 GIMP, Adobe Illustrator and JAVA.
 The Apps are called “[Substratum] Navigate theme” and “[Substratum] Status
